k8s/search-deployment.yaml
---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: search-service-group
  labels:
    app: search
    ns: group
spec:
  selector:
    matchLabels:
      app: search
      ns: group
  replicas: 1
  template:
    metadata:
      labels:
        app: search
        ns: group
    spec:
      containers:
      - name: search-service
        imagePullPolicy: Always
        image: "gcr.io/deep-thought-185318/search-service:e6b8b6fdce964f0b2c0aaecf9256d16fdfc6bfc8"
        resources:
          requests:
            memory: "0.5Gi"
            cpu: "0.5"
        ports:
        - containerPort: 8080
          name: server
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            #httpHeaders:
            # - name: X-Custom-Header
            #  value: Awesome
          initialDelaySeconds: 65
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: "/api/search?q=*:*"
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
