k8s/search-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: search-service-group
  labels:
    app: search
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
  selector:
    app: search
    ns: group
  type: LoadBalancer
  #type: NodePort
