k8s/search-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: search-ing-group
  annotations:
    kubernetes.io/ingress.global-static-ip-name: search-service-group
  labels:
    app: search
    ns: group
spec:
  backend:
    serviceName: search-service-group
    servicePort: 8080
